fix: add overflow for hidden div

--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ html {
     box-shadow: 0px 4px 14px 20px rgba(86, 10, 10, 0.2);
 }
 
+.task {
+    height: 0;
+    overflow: hidden;
+}
+
 .header {
     padding-top: 30px;
     
